# mantle

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mint.toml  render_graph_implementation.md
mantle/src/: CMakeLists.txt  main.cpp
mantle/src/assets/: CMakeLists.txt
mantle/src/assets/private/: asset_manager.cpp  impl.h
mantle/src/build_info/private/: build_info.cpp
mantle/src/camera/: CMakeLists.txt
mantle/src/camera/private/: camera.cpp
mantle/src/camera/public/camera/: camera.h
mantle/src/core/: CMakeLists.txt
mantle/src/core/private/: logger.cpp
mantle/src/core/private/concurrency/: worker_pool.cpp
mantle/src/core/private/memory/: arena_allocator.cpp  os_memory.cpp  persistent_allocator.cpp  tlsf_allocator.cpp  virtual_heap.cpp
mantle/src/core/public/: helpers.h
mantle/src/core/public/core/: assert.h  logger.h  macros.h  types.h
mantle/src/ecs/: CMakeLists.txt
mantle/src/ecs/private/: ecs.cpp
mantle/src/ecs/private/camera/: camera.cpp  camera.h  components.h
mantle/src/ecs/private/input/: components.h  input.cpp  input.h
mantle/src/ecs/private/rumbling/: rumbling.cpp  rumbling.h
mantle/src/ecs/public/ecs/: ecs.h
mantle/src/engine/: CMakeLists.txt
mantle/src/engine/private/: default_render_pipeline.cpp  default_render_pipeline.h  engine.cpp  simple_renderer.cpp  simple_renderer.h
mantle/src/engine/public/engine/: engine.h
mantle/src/input/: CMakeLists.txt
mantle/src/input/private/: input.cpp  input_system.cpp
mantle/src/keybinds/: CMakeLists.txt
mantle/src/math/: CMakeLists.txt
mantle/src/math/private/: aabb.cpp  frustum.cpp  plane.cpp
mantle/src/math/public/math/: aabb.h  frustum.h  plane.h
mantle/src/mesh/public/mesh/: mesh.h  mesh_handle.h  vertex.h
mantle/src/noise/private/: sampler.cpp
mantle/src/noise/public/noise/: noise.h  sampler.h
mantle/src/physics/: CMakeLists.txt
mantle/src/physics/private/: arena_temp_allocator.cpp  arena_temp_allocator.h  broad_phase_layers.cpp  broad_phase_layers.h  character_controller_impl.cpp  character_controller_impl.h  layers.cpp  layers.h  physics_system.cpp  physics_system_impl.cpp  physics_system_impl.h
mantle/src/renderer/: CMakeLists.txt
mantle/src/renderer/private/: renderer.cpp  renderer_impl.cpp  renderer_impl.h  types.h  utils.cpp  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_device.cpp  vulkan_device.h  vulkan_graphics_context.cpp  vulkan_graphics_context.h  vulkan_resouce_manager.cpp  vulkan_resource_manager.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_types.h
mantle/src/system_info/private/: system_info.cpp
mantle/src/window/: CMakeLists.txt
mantle/src/window/private/: glfw_allocator.cpp  glfw_custom_allocator.cpp  sdl_allocator.cpp  sdl_allocator.h  window.cpp
mantle/src/world/: CMakeLists.txt
mantle/src/world/private/: bgm.cpp  bgm.h  chunk.cpp  chunk_generation_system.cpp  chunk_helpers.h  chunk_meshing_system.cpp  chunk_rendering_system.cpp  chunk_storage_system.cpp  light_propagation.cpp  world.cpp
mantle/tests/: CMakeLists.txt  aabb.cpp  arena.cpp  bgm.cpp  frustum.cpp  virtual_heap.cpp
(+215 files in other folders)
